# Media

./: .gitignore  README.md  parse_crash.bat
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CMakeLists.txt
app/src/main/cpp/common/include/: YuvData.h
app/src/main/cpp/common/src/: Utils.cpp  YuvData.cpp  stb_image_write.cpp
app/src/main/cpp/decode/: CMakeLists.txt
app/src/main/cpp/decode/ffmpeg/include/libavformat/: avformat.h
app/src/main/cpp/decode/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/decode/include/: AVSyncClock.h  AudioPlayer.h  DecodeCommonUtils.h  EncodeNakedStream.h  EncodeStream2.h  FFmpegEncodeStream.h  FFmpegStreamToMP4.h  FrameCallback.h  FrameType.h  SurfaceHolder.h
app/src/main/cpp/decode/src/: AVSyncClock.cpp  AudioPlayer.cpp  DecodeCommonUtils.cpp  EncodeNakedStream.cpp  EncodeStream2.cpp  FFmpegEncodeStream.cpp  FFmpegStreamToMP4.cpp  SurfaceHolder.cpp  sonic.c
app/src/main/cpp/decode/yuv/include/libyuv/: convert_from_argb.h  planar_functions.h  rotate.h  scale_row.h
app/src/main/cpp/medie/: AiLineHelper.cpp  AiLineHelper.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  EglEnvironment.h  EglUtils.cpp  EncodeNakedStream.cpp  EncodeNakedStream.h  EncodeStream2.cpp  EncodeStream2.h  FFmpegEncodeStream.cpp  FFmpegEncodeStream.h  FFmpegStreamToMP4.cpp  FFmpegStreamToMP4.h  FrameCallback.h  GlDraw.cpp  GlDraw.h  GlDrawAi.cpp  GlDrawAi.h  GlDrawFbo.cpp  GlDrawFbo.h  GlRendering.cpp  GlRendering.h  GlShaderText.h  GlThread.cpp  GlThread.h  JniUtils.cpp  Looper.cpp  MediaController.cpp  MediaController.h  Shader.h  Utils.cpp  VideoRender.cpp  VideoRender.h  native.cpp  native.h  native_log.h
app/src/main/cpp/shared/: CMakeLists.txt
app/src/main/cpp/shared/include/: EglEnvironment.h  GlDraw.h  GlDrawAi.h  GlDrawFbo.h  GlRendering.h  GlShaderText.h  GlThread.h  VideoRender.h
app/src/main/cpp/shared/src/: AiLineHelper.cpp  EglEnvironment.cpp  EglUtils.cpp  GlDraw.cpp  GlDrawAi.cpp  GlDrawFbo.cpp  GlRendering.cpp  GlThread.cpp  Looper.cpp  VideoRender.cpp
app/src/main/cpp/yuv/: CMakeLists.txt  media_jni_NativeMethod.cpp
app/src/main/java/com/git/media/: MainActivity.kt  NativeMedia.java  WebRtcNetworkQualityMonitor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
gradle/: libs.versions.toml
videosrc/: 1.ts  4.ts  5.ts
